# rusty-bundle

./: Cargo.toml  README.md  build.rs  instructions.md
src/: main.rs  scf.rs
src/bundle/: mod.rs  model.rs
src/cli/: bundle.rs
src/network/: bundle.proto  bundle.rs  client.rs  mod.rs  protobuf.rs  server.rs
src/routing/: bundleManager.rs  engine.rs  mod.rs  model.rs  scf.rs
src/storage/: json_storage.rs  mod.rs  storage.rs  storage_interface.rs
